[package]
name = "nes_wasm"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
nes_core = { path = "../nes_core" }

js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = [
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'ImageData',
  'Window',
  'Document',
  'KeyboardEvent',
] }
