[package]
name = "nes_yew"
version = "0.1.0"
edition = "2021"

[dependencies]
nes_core = { path = "../nes_core" }

js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = [
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'ImageData',
] }

yew = { version = "0.20.0", features = ["csr"] }
